hphp/test/zend/bad/ext/standard/tests/file/bug41655_1.php
<?php
$a=glob("./*.jpeg");
var_dump($a);
echo "Done\n";
?>
